adds cursor functionality

--- a/src/_styles/components/_gooey.scss
+++ b/src/_styles/components/_gooey.scss
@@ -4,6 +4,7 @@
     height: 200px;
     margin: 0 auto;
     cursor: pointer;
+    background: rgba($primary-color, 0.1);
 }
 
 .experience-base-img {
